@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 2022-XX-XX  Release 7.34.X                                     ---
 ----------------------------------------------------------------------
 
+* added -N view obj name option to overlay command - Cliff Yapp
 * updated man pages for GED brep command - Cliff Yapp
 * added man page for MGED Overlaps Tool - Chris McGregor
 * major STEPcode updates, using unmodified upstream 0.8.1 - Cliff Yapp
